filter_macros/tests/try/err/unnamed_fields.rs
use filter_macros::Query;

#[derive(Query)]
pub struct T(String, i32);

fn main() {}
